# rich-tables

./: .gitignore  LICENSE  README.md  generate_requirements  pre-commit  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: build.yml
rich-tables/: music.py  table.py  utils.py
rich_tables/: calendar.py  diff.py  fields.py  generic.py  github.py  log_handler.py  music.py  sql.py  table.py  task.py  types.py  utils.py
src/rich_tables/: generic.py  github.py  music.py  table.py  utils.py
svgs/: emails.json  nested_json.json  pr.json  simple_json.json  timed.json
tests/: test_outputs.py
tests/json/: album.json  albums.json  aligned_object_arrays.json  calendar.json  diff.json  emails.json  generic.json  hue.json  jira_diff.json  music_list.json  nested_arrays.json  pr.json  pr_data.json  simple_json.json  sql.json  tasks.json  text_diff.json  timed.json
